force-app/main/default/objects/Account/fields/Accounts_Count__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>