force-app/main/default/objects/Account/fields/Active_Frame_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Active_Frame_Agreements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Frame Agreements</label>
    <type>Checkbox</type>
</CustomField>