force-app/main/default/objects/Account/fields/Advisory_Services_Priority__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Services_Priority__c</fullName>
    <label>Advisory Services Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>P5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>