force-app/main/default/objects/Account/fields/Advisory_Servises_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Servises_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advisory Servises Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>