force-app/main/default/objects/Account/fields/All_Owners__c.field-meta.xml
<CustomField>
    <fullName>All_Owners__c</fullName>
    <formula>Owner.FirstName + &quot; &quot; + Owner.LastName  + &quot;-&quot; +  
Apps_Owner__r.FirstName + &quot; &quot; + Apps_Owner__r.LastName + &quot;-&quot; +
BC_Owner__r.FirstName + &quot; &quot; + BC_Owner__r.LastName + &quot;-&quot; +
DPS_Owner__r.FirstName + &quot; &quot; + DPS_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Owners</label>
    <type>Text</type>
</CustomField>