force-app/main/default/objects/Account/fields/Apps_Active_Client_Network__c.field-meta.xml
<CustomField>
    <fullName>Apps_Active_Client_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field deactivated 11.10.2023 /Request by Anne Sofie Bjørnebye.  
Field to be deleted</description>
    <label>Apps Active Client Network</label>
    <type>Checkbox</type>
</CustomField>