force-app/main/default/objects/Account/fields/Apps_Client_Navigator__c.field-meta.xml
<CustomField>
    <fullName>Apps_Client_Navigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apps Client Navigator</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Accounts (Apps Client Developer 2)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>