force-app/main/default/objects/Account/fields/Apps_Client_Partner__c.field-meta.xml
<CustomField>
    <fullName>Apps_Client_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field inactive from 11.10.2023,request by Anne Sofie Bjørnebye.  Field to be deletes after suitable quarantine time</description>
    <label>Apps Client Partner</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Accounts (Apps Client Partner)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>