force-app/main/default/objects/Account/fields/Apps_Owner__c.field-meta.xml
<CustomField>
    <fullName>Apps_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apps Client Developer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Business_Unit__c</field>
            <operation>equals</operation>
            <value>APPS</value>
        </filterItems>
        <filterItems>
            <field>User.Business_Unit__c</field>
            <operation>equals</operation>
            <value>Business Value Services</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>APPSOwner</relationshipName>
    <type>Lookup</type>
</CustomField>