force-app/main/default/objects/Account/fields/Apps_Priority__c.field-meta.xml
<CustomField>
    <fullName>Apps_Priority__c</fullName>
    <label>Apps Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1 - Stay Strategic</fullName>
            </value>
            <value>
                <fullName>P2 - Become Strategic</fullName>
            </value>
            <value>
                <fullName>P3 - Grow National</fullName>
            </value>
            <value>
                <fullName>P4 - Grow Tail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>