force-app/main/default/objects/Account/fields/Apps_Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Apps_Project_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apps Project Owner</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Accounts (APPS Project Owner)</relationshipLabel>
    <relationshipName>Accounts_AppsProjectOwner</relationshipName>
    <type>Lookup</type>
</CustomField>