force-app/main/default/objects/Account/fields/BC_Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>BC_Account_Classification__c</fullName>
    <label>Advisory Account Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
                <default>true</default>
                <label>P4</label>
            </value>
            <value>
                <fullName>1 Priority Account</fullName>
                <isActive>false</isActive>
                <label>1 Priority Account</label>
            </value>
            <value>
                <fullName>2 Focus Account</fullName>
                <isActive>false</isActive>
                <label>2 Focus Account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>