force-app/main/default/objects/Account/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set Inactive. Account and related records are hidden for users via Sharing rules  DO NOT REMOVE</description>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>