force-app/main/default/objects/Account/fields/Blocked_date__c.field-meta.xml
<CustomField>
    <fullName>Blocked_date__c</fullName>
    <description>Date when account is blocked</description>
    <label>Blocked date</label>
    <type>Date</type>
</CustomField>