force-app/main/default/objects/Account/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <description>Reason for deactivating Account</description>
    <label>Blocked Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>