force-app/main/default/objects/Account/fields/BVS_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>BVS_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BVS Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>