force-app/main/default/objects/Account/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <inlineHelpText>P1: Krever innsats. Kundeteam ledet av BD. Kunden er viktig for å sikre vår posisjon. Store bedrifter hvor vi i har betydelig omsetning —&gt;
P2: Potensiale til å bli P1. Store bedrifter som prioriteres gjennom sterk salgsinnsats —&gt;
P3: Vi ønsker å øke omsetningen og ta en sterk posisjon. Ikke potensiale til å bli P1, men likevel viktige —&gt;
P4: Små og mellomstore med begrenset potensiale, eller store kunder med begrenset potensiale hvor vi ikke ønsker å prioritere salgsinnsats.</inlineHelpText>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
                <default>true</default>
                <label>P4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>