force-app/main/default/objects/Account/fields/Contracts_Archive__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Archive__c</fullName>
    <label>Contracts Archive</label>
    <type>Url</type>
</CustomField>