force-app/main/default/objects/Account/fields/Customer_plans__c.field-meta.xml
<CustomField>
    <fullName>Customer_plans__c</fullName>
    <label>Customer plans</label>
    <type>Url</type>
</CustomField>