force-app/main/default/objects/Account/fields/DPS_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>DPS_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DPS Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>