force-app/main/default/objects/Account/fields/DPS_Client_Developer1__c.field-meta.xml
<CustomField>
    <fullName>DPS_Client_Developer1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DPS Client Developer1</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Accounts (DPS Client Developer1)</relationshipLabel>
    <relationshipName>Accounts_DPSClientDev1</relationshipName>
    <type>Lookup</type>
</CustomField>