force-app/main/default/objects/Account/fields/DPS_Customer_Priority__c.field-meta.xml
<CustomField>
    <fullName>DPS_Customer_Priority__c</fullName>
    <label>DPS Customer Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1 - Stay Strategic</fullName>
            </value>
            <value>
                <fullName>P2 - Become Strategic</fullName>
            </value>
            <value>
                <fullName>P3 - Keep &amp; Grow</fullName>
            </value>
            <value>
                <fullName>P4 - Grow Local</fullName>
            </value>
            <value>
                <fullName>P5A - Grow</fullName>
            </value>
            <value>
                <fullName>P5B - Grow</fullName>
            </value>
            <value>
                <fullName>P5C - Optimize</fullName>
            </value>
            <value>
                <fullName>1 - Priority</fullName>
                <isActive>false</isActive>
                <label>1 - Priority</label>
            </value>
            <value>
                <fullName>2 - Hunting</fullName>
                <isActive>false</isActive>
                <label>2 - Hunting</label>
            </value>
            <value>
                <fullName>3 - Normal</fullName>
                <isActive>false</isActive>
                <label>3 - Normal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>