force-app/main/default/objects/Account/fields/DPS_Engagement_Manager__c.field-meta.xml
<CustomField>
    <fullName>DPS_Engagement_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DPS Engagement Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Accounts (DPS Engagement Manager)</relationshipLabel>
    <relationshipName>Accounts_DPSEngagemtMgr</relationshipName>
    <type>Lookup</type>
</CustomField>