force-app/main/default/objects/Account/fields/DPS_Hunting__c.field-meta.xml
<CustomField>
    <fullName>DPS_Hunting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tag DPS accpount for Hunting</description>
    <label>DPS Hunting</label>
    <type>Checkbox</type>
</CustomField>