force-app/main/default/objects/Account/fields/DPS_Owner__c.field-meta.xml
<CustomField>
    <fullName>DPS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DPS Client Developer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Business_Unit__c</field>
            <operation>equals</operation>
            <value>DPS</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>