force-app/main/default/objects/Account/fields/DPS_Team__c.field-meta.xml
<CustomField>
    <fullName>DPS_Team__c</fullName>
    <label>DPS Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank &amp; Insurance</fullName>
            </value>
            <value>
                <fullName>Defence &amp; Homeland Security</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Telco &amp; Technology</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Regional Hunting Midt/Nord</fullName>
            </value>
            <value>
                <fullName>Regional Hunting Sør/Vest</fullName>
            </value>
            <value>
                <fullName>Strat Sourcing</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
                <isActive>false</isActive>
                <label>Black</label>
            </value>
            <value>
                <fullName>Blue</fullName>
                <isActive>false</isActive>
                <label>Blue</label>
            </value>
            <value>
                <fullName>Energy &amp; Industry</fullName>
                <isActive>false</isActive>
                <label>Energy &amp; Industry</label>
            </value>
            <value>
                <fullName>Gold</fullName>
                <isActive>false</isActive>
                <label>Gold</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <isActive>false</isActive>
                <label>Green</label>
            </value>
            <value>
                <fullName>Midt/Nord</fullName>
                <isActive>false</isActive>
                <label>Midt/Nord</label>
            </value>
            <value>
                <fullName>Pink</fullName>
                <isActive>false</isActive>
                <label>Pink</label>
            </value>
            <value>
                <fullName>Purple</fullName>
                <isActive>false</isActive>
                <label>Purple</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <isActive>false</isActive>
                <label>Red</label>
            </value>
            <value>
                <fullName>Sør/Vest</fullName>
                <isActive>false</isActive>
                <label>Sør/Vest</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <isActive>false</isActive>
                <label>Yellow</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>