force-app/main/default/objects/Account/fields/GCustomer__c.field-meta.xml
<CustomField>
    <fullName>GCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer grouping by Sopra Steria Group. Can only be modified in Navision.</inlineHelpText>
    <label>GCustomer</label>
    <referenceTo>G_Customer__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>