force-app/main/default/objects/Account/fields/I_Am_BU_Owner__c.field-meta.xml
<CustomField>
    <fullName>I_Am_BU_Owner__c</fullName>
    <description>For selections in reports, listviews</description>
    <formula>If(OR( $User.Id =  Apps_Owner__r.Id , $User.Id = BC_Owner__r.Id , $User.Id = DPS_Owner__r.Id ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I Am BU Owner</label>
    <type>Checkbox</type>
</CustomField>