force-app/main/default/objects/Account/fields/IMCS_Owner__c.field-meta.xml
<CustomField>
    <fullName>IMCS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IM Owner</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Business_Unit__c</field>
            <operation>equals</operation>
            <value>IMCS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>IMCSOwner</relationshipName>
    <type>Lookup</type>
</CustomField>