force-app/main/default/objects/Account/fields/IMOS_Owner__c.field-meta.xml
<CustomField>
    <fullName>IMOS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IMOS Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IMOSOwner</relationshipName>
    <type>Lookup</type>
</CustomField>