force-app/main/default/objects/Account/fields/KCRM_ID__c.field-meta.xml
<CustomField>
    <fullName>KCRM_ID__c</fullName>
    <label>KCRM ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>