force-app/main/default/objects/Account/fields/Latest_Closed_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Latest_Closed_Opportunity__c</fullName>
    <label>Latest Closed Opportunity</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won, Closed Lost, Abandoned by Customer, Abandoned by Us</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>