force-app/main/default/objects/Account/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Official account name. Can only be modified in Navision</inlineHelpText>
    <label>Name</label>
    <type>Text</type>
</CustomField>