force-app/main/default/objects/Account/fields/Navision_Customer_SE__c.field-meta.xml
<CustomField>
    <fullName>Navision_Customer_SE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this customer have an active Navision Account for Sweden?
Used for SN Integration, do not remove!</description>
    <label>Navision Customer SE</label>
    <type>Checkbox</type>
</CustomField>