force-app/main/default/objects/Account/fields/New_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Account Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Country</field>
            <operation>equals</operation>
            <value>Norway</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>