force-app/main/default/objects/Account/fields/Number_of_Frame_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Frame_Agreements__c</fullName>
    <label>Number of Frame Agreements</label>
    <summarizedField>Opportunity.Won_Count__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Frame agreement</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>