force-app/main/default/objects/Account/fields/Owned_by_Me__c.field-meta.xml
<CustomField>
    <fullName>Owned_by_Me__c</fullName>
    <formula>If( Owner__c =  $User.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owned by Me</label>
    <type>Checkbox</type>
</CustomField>