force-app/main/default/objects/Account/fields/Owner_Blocked_Account__c.field-meta.xml
<CustomField>
    <fullName>Owner_Blocked_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to maintain owner for Blocked account. Account will always be visible for Account owner, so we need to replace owner when account = blocked</description>
    <label>Owner Blocked Account</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>