force-app/main/default/objects/Account/fields/Owners_BU__c.field-meta.xml
<CustomField>
    <fullName>Owners_BU__c</fullName>
    <formula>TEXT( Owner.Business_Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owners BU</label>
    <type>Text</type>
</CustomField>