force-app/main/default/objects/Account/fields/Ownership_NO__c.field-meta.xml
<CustomField>
    <fullName>Ownership_NO__c</fullName>
    <description>Used for weekly forecast reporting to FR. After we modified these 4 values in Sector picklist, France wants to keep old values for consistency</description>
    <formula>CASE(Ownership, 
					&apos;FS&apos;, &apos;Finance&apos;,
     &apos;Healthcare&apos; , &apos;Health&apos;,
     &apos;TMT&apos;, &apos;Telecom &amp; Media&apos;,
					TEXT(Ownership))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SectorNO</label>
    <type>Text</type>
</CustomField>