force-app/main/default/objects/Account/fields/OwnershipSE__c.field-meta.xml
<CustomField>
    <fullName>OwnershipSE__c</fullName>
    <formula>CASE(Ownership_SE__c,
&apos;FS&apos;, &apos;Banking &amp; Insurance&apos;,
&apos;Healthcare&apos; , &apos;Health&apos;,
&apos;TMT&apos;, &apos;Telecom &amp; Media&apos;,
&apos;Energy&apos;, &apos;Energy &amp; Industry&apos;,
&apos;Industry&apos;, &apos;Energy &amp; Industry&apos;,
&apos;NGO&apos;, &apos;Member&apos;,	
&apos;Other&apos;, &apos;Private&apos;,					
TEXT(Ownership_SE__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SectorSE</label>
    <type>Text</type>
</CustomField>