force-app/main/default/objects/Account/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>ServiceNow</fullName>
            </value>
            <value>
                <fullName>Microsoft ERP</fullName>
            </value>
            <value>
                <fullName>Microsoft CRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>