force-app/main/default/objects/Account/fields/Regional_Classification__c.field-meta.xml
<CustomField>
    <fullName>Regional_Classification__c</fullName>
    <description>This field is just for the smaller branches f.ex. Tromsø. They are able to classify their accounts on a regional level.</description>
    <inlineHelpText>This field is for regional branches f.ex. (Tromsø) in order to classify customers where the general classification is not adaptable.</inlineHelpText>
    <label>Regional Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>