force-app/main/default/objects/Account/fields/RegionsSE__c.field-meta.xml
<CustomField>
    <fullName>RegionsSE__c</fullName>
    <label>Regions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stockholm</fullName>
            </value>
            <value>
                <fullName>Göteborg</fullName>
            </value>
            <value>
                <fullName>Malmö</fullName>
            </value>
            <value>
                <fullName>Östersund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>