force-app/main/default/objects/Account/fields/SN_sys_id__c.field-meta.xml
<CustomField>
    <fullName>SN_sys_id__c</fullName>
    <description>Used for service now integration. Do not delete!</description>
    <label>Service now sys ID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>