force-app/main/default/objects/Account/fields/To_be_blocked__c.field-meta.xml
<CustomField>
    <fullName>To_be_blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as intermediary field in the process to block account. Do not remove!
Field is not visible on Account pagelayout</description>
    <label>To be blocked</label>
    <type>Checkbox</type>
</CustomField>