force-app/main/default/objects/Account/fields/Top_Parent__c.field-meta.xml
<CustomField>
    <fullName>Top_Parent__c</fullName>
    <description>Top level in account hierarchy, used for reporting</description>
    <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Name)),Parent.Name,
Name)))))</formula>
    <label>Top Parent</label>
    <type>Text</type>
</CustomField>