force-app/main/default/objects/Account/fields/Top_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Top_Parent_Id__c</fullName>
    <formula>CASESAFEID(IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Parent.Id)), Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Id)), Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Id)),Parent.Id,
Id))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Top Parent Id</label>
    <type>Text</type>
</CustomField>