force-app/main/default/objects/Account/fields/Total_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunities__c</fullName>
    <description>Count opportunities all time</description>
    <label>#Total Opportunities</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>